clusters/smba/infra/authentik.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
