clusters/smba/infra/careers.cloudnative.nz.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: careers-cloudnative-nz
  namespace: careers-cloudnative-nz
  labels:
    environment: production
spec:
  ports:
    - port: 8101
      targetPort: 8101
  selector:
    app: careers-cloudnative-nz
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: careers-cloudnative-nz
  namespace: careers-cloudnative-nz
  labels:
    environment: production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - secretName: "ingress-nginx/cloudnative.nz-tls"
        - "careers.cloudnative.nz"
  rules:
    - host: "careers.cloudnative.nz"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: careers-cloudnative-nz
                port:
                  number: 8101
status:
  loadBalancer:
    ingress:
      # Let's use the same IP as everyone else
      - ip: 123.253.177.110
