clusters/smba/infra/multiplex.ii.nz.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # Necessary for websockets
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
      proxy_set_header Upgrade $http_upgrade;
      proxy_http_version 1.1;
      proxy_set_header X-Forwarded-Host $http_host;
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_set_header X-Forwarded-For $remote_addr;
      proxy_set_header Host $host;
      proxy_set_header Connection "upgrade";
      proxy_cache_bypass $http_upgrade;
      }
  labels:
    app: reveal-multiplex
  name: multiplex-ii-nz
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: multiplex.ii.nz
      http:
        paths:
          - backend:
              service:
                name: reveal-multiplex
                port:
                  number: 1948
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - multiplex.ii.nz
status:
  loadBalancer:
    ingress:
      # Let's use the same IP as everyone else
      - ip: 123.253.177.110
