clusters/smba/infra/powerdns-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: powerdns
  labels:
    powerdns: auth
  # annotations:
  #   metallb.universe.tf/address-pool: default
  #   metallb.universe.tf/allow-shared-ip: "dns"
spec:
  # externalTrafficPolicy: Local
  # externalTrafficPolicy: Cluster
  type: LoadBalancer
  loadBalancerIP: 123.253.176.253
  selector:
    powerdns: auth
  ports:
    - name: "dns-tcp"
      protocol: TCP
      port: 53
      targetPort: 53
      # targetPort: dns-tcp
    - name: "dns-udp"
      port: 53
      protocol: UDP
      targetPort: 53
    - name: "auth-web"
      protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  labels:
    app: powerdns
  name: pdns-ii-nz
  namespace: powerdns
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01
spec:
  ingressClassName: nginx
  rules:
    - host: pdns.ii.nz
      http:
        paths:
          - backend:
              service:
                name: auth
                port:
                  number: 8081
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - pdns.ii.nz
      secretName: "pdns"
status:
  loadBalancer:
    ingress:
      # Let's use the same IP as everyone else
      - ip: 123.253.177.110
